# foss-legal-templates

./: CNAME  README.md  contract-software.de-CH.md
presentation/: 20250406 - OLL Challenge.odp
proxeus/: Proxeus-Form_659ca795-2c71-49d1-a21a-a59eebcaa94d_20-11-2024_23-14.db  Proxeus-Workflow_1eac6edd-8d05-482d-9872-873205245cf9_20-11-2024_23-14.db
website/: Makefile  pelicanconf.py  publishconf.py  pyproject.toml
